2014-12-02 Ben Shi <powerstudio1st AT 163 DOT com>
	* sim/ucsim/stm8.src/stm8.cc:
	  Make stack larger, since some test cases cost large stack space.

2014-12-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/z80/ralloc.c:
	  Do not try to use spill locations that are not on the stack in ports that can't handle it.
	* support/regression/tests/longlong.c:
	  Enable some long long tests that pass for stm8 now.

2014-12-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Initialize usl.spillLoc to help track down spill location issues.
	* src/stm8/ralloc.c:
	  Minor cleanup.

2014-11-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* configure.in,
	* configure,
	* sdccconf_h.in,
	* sdas/linksrc/lkar.c: Use configure to detect system strndup()
	  (alternate fix for bugs #2310 and #2303)
	* sdas/linksrc/Makefile.in: Removed -std=c99; it caused problems with
	  mingw32 build

2014-11-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/ctype.h: compare as unsigned chars, added static asserts on EOF
	* device/lib/isdigit.c,
	* device/lib/islower.c,
	* device/lib/isupper.c: include stdio.h to enable the static assert in ctype.h
	* support/regression/tests/gcc-torture-execute-20050613-1.c: split up ASSERTs

2014-11-23 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt:
	  Bugfix, thanks to Franz.

2014-11-23 Ben Shi <powerstudio1st AT 163.com>

	* support/regression/tests/bug-2304.c:
	  Improve this test case.
	* sdas/linksrc/lkmain.c:
	  Add bound check.

2014-11-22 Ben Shi <powerstudio1st AT 163.com>

	* src/stm8/peep.c:
	  Fix potential bugs.

2014-11-22 Ben Shi <powerstudio1st AT 163.com>

	* src/SDCCpeeph.c:
	  Add function notSimilar().
	* src/stm8/peep.c:
	  Make notUsed() more aggressive.
	* src/stm8/peeph.def:
	  Add more rules.

2014-11-21 Philipp Klaus Krause <philipp@informatik.uni-frankfurt.de>

	* src/stm8/main.c:
	  Comment expaining why we can't use the byte at 0 in C.
